# regal-tools

./: .gitignore  Pipfile  README.md  pyproject.toml
reports/: __main__.py  controller.py  view.py
reports/scripts/: class_list.sql
src/regal/: __main__.py  config.py  controller.py  database.py  logger.py  model.py  view.py
src/regal/scripts/: class_list.sql  classes.sql  current_arrears.sql  fee_schedules.sql  previous_arrears.sql
